# model/user.query.js
@@ -1,29 +1,28 @@
 const { sequelize } = require("../configs/db");
 const { DataTypes } = require("sequelize");
 const { isNull } = require("../utils/helper");
-const { Student, Class } = require("./defineModel");
+const { User } = require("./defineModel");
 
 module.exports = {
     findById: async function (id, callback = null) {
         try {
-            const student = await Student.findByPk(id);
-            if (!callback) return student;
-            if (student) {
-                return callback(null, student);
+            const user = await User.findByPk(id);
+            if (!callback) return user;
+            if (user) {
+                return callback(null, user);
             } else {
-                return callback(new Error(`student ${id} doesn't exits`), null);
+                return callback(new Error(`user ${id} doesn't exits`), null);
             }
         } catch (error) {
             return callback(error, null);
         }
     },
-    createNew: async function ({ id_student = null, username = null, password = null, gender = 1, fullName = null, address = "", phoneNumber = null, email = "", id_class = null, id_faculty = null, course_year = null }, callback) {
+    createNew: async function ({ id_user = null, gender = 1, full_name = null, address = "", phone_number = null, role = "", id_faculty = null }, callback) {
         try {
-            const checkNull = isNull([id_student, username, password, gender, fullName, address, phoneNumber, email, id_class, id_faculty, course_year]);
+            const checkNull = isNull([id_user, gender, full_name, address, phone_number, role, id_faculty]);
             if (checkNull.checked) {
-                // console.log(12321331);
-                const student = await Student.create({ id_student, username, password, gender, fullName, address, phoneNumber, email, id_class, id_faculty, course_year });
-                callback(null, student);
+                const user = await User.create({ id_user, gender, full_name, address, phone_number, role, id_faculty });
+                callback(null, user);
             } else {
                 console.log(checkNull.msg);
                 return callback(new Error(checkNull.msg), null);
@@ -34,14 +33,12 @@ module.exports = {
     },
     findAll: async function (callback = null) {
         try {
-            const data = await Student.findAll({
-                attributes: { exclude: ["username", "password"] },
-            });
+            const data = await User.findAll();
             if (!callback) return data;
             if (data) {
                 return callback(null, data);
             } else {
-                return callback(new Error(`Student data does not exist or empty!`), null);
+                return callback(new Error(`User data does not exist or empty!`), null);
             }
         } catch (error) {
             return callback(error, null);
@@ -53,12 +50,12 @@ module.exports = {
             let toUpdate = {};
             toUpdate[Object.keys(field)[0]] = Object.values(field)[0];
             if (checkNull.checked) {
-                const student = await Student.update(Object.assign(toUpdate), {
+                const user = await User.update(Object.assign(toUpdate), {
                     where: {
-                        id_student: id,
+                        id_user: id,
                     },
                 });
-                return callback(null, student);
+                return callback(null, user);
             } else {
                 return callback(new Error(checkNull.msg), null);
             }
@@ -66,21 +63,21 @@ module.exports = {
             return callback(error, null);
         }
     },
-    updateMany: async (id_student = null, keys = [], values = [], callback) => {
+    updateMany: async (id_user = null, keys = [], values = [], callback) => {
         try {
-            const checkNull = isNull([id_student, keys, values]);
+            const checkNull = isNull([id_user, keys, values]);
             // let toUpdate = {};
             let toUpdate = {};
             keys.forEach((key, index) => {
                 toUpdate[key] = values[index];
             });
             if (checkNull.checked) {
-                const student = await Student.update(toUpdate, {
+                const user = await User.update(toUpdate, {
                     where: {
-                        id_student,
+                        id_user,
                     },
                 });
-                return callback(null, student);
+                return callback(null, user);
             } else {
                 return callback(new Error(checkNull.msg), null);
             }
